--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.6.0/kakao.min.js"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=343c670294b3d52be341b8d4917dd245"
+    ></script>
     <script src="./js/index.js"></script>
     <link rel="stylesheet" href="css/index.css" />
   </head>
@@ -29,8 +33,7 @@
       </div>
 
       <div id="main">
-
-
+        <div id="map" style="width: 500px; height: 400px"></div>
       </div>
     </div>
   </body>
